openmediavault (6.9.3-1) stable; urgency=low

  * Relocate `Logout` option to user settings menu.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 01 Oct 2023 14:06:27 +0200

openmediavault (6.9.2-1) stable; urgency=low

  * Various improvements related to networking in the PHP backend.
  * Disable the caching of UI files to prevent annoying browser
    cache flushing.
  * Remove support of `venet` ethernet network devices names.
    Predictable devices names are used instead nowadays.
  * Add better support for `veth` virtual ethernet devices that
    are used by containers.
  * Issue #1596: Support DSA network interfaces.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 26 Sep 2023 17:24:48 +0200

openmediavault (6.9.1-1) stable; urgency=low

  * Security related improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 25 Sep 2023 18:02:27 +0200

openmediavault (6.9.0-1) stable; urgency=low

  * Update locale files.
  * Fix UI regression. Hide form fields that should be hidden.
  * Issue #1592: Enhance SMB `Home directories` settings.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 06 Sep 2023 21:52:10 +0200

openmediavault (6.8.0-1) stable; urgency=low

  * Update locale files.
  * Change default governor to `schedutil` on ARM systems. This can
    be customized via the `OMV_CPUFREQUTILS_GOVERNOR` environment
    variable.
  * Add setting to choose the minimum SMB protocol version. This
    way SMB1 can be enabled to allow legacy systems to access your
    SMB shares.
  * Issue #1588: Support SMART information for devices connected
    via RTL9210B-CG.
  * Issue #1589: Fix a problem in the netplan.io configuration for
    ethernet network interfaces with non-permanent MAC addresses.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 28 Aug 2023 20:28:10 +0200

openmediavault (6.7.1-2) stable; urgency=low

  * Update locale files.
  * Various improvements.